--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 					<p></p>
 					<div class="col-12 text-center mt-4 mt-lg-5">
 						<p>
-							<span class="photo hover-target">Blog</span>
+							<span class="Blog hover-target">Blog</span>
 							<span class="member hover-target">Member List</span>
 							<span class="join hover-target">Join US</span>
 						</p>
