--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 					<p></p>
 					<div class="col-12 text-center mt-4 mt-lg-5">
 						<p>
-							<span class="Blog hover-target">Blog</span>
+							<span class="photo hover-target">Photo</span>
 							<span class="member hover-target">Member List</span>
 							<span class="join hover-target">Join US</span>
 						</p>
@@ -77,12 +77,12 @@
 		</div>
 	</div>
 
-	<div class="Blog-section">
-		<div class="Blog-close hover-target"></div>
+	<div class="photo-section">
+		<div class="photo-close hover-target"></div>
 		<div class="container">
 			<div class="row justify-content-center">
 				<div class="col-12 text-center">
-					<h3>Blog</h3>
+					<h3>Photo</h3>
 				</div>
 				<div class="col-12 mt-3 text-center">
 					<p><span>Photographs of activity records</span></p>
